feat: primeira versão

--- a/src/i18n/translate/es.json
+++ b/src/i18n/translate/es.json
@@ -37,10 +37,10 @@
         "project_card_one_description" : "Es una aplicación de inicio de sesión, que envía correos electrónicos para recuperar contraseñas de usuarios registrados y utiliza una biblioteca para cifrar contraseñas.",
         
         "project_card_two_title" : "Diseño de red social",
-        "project_card_two_description" : "Este es un diseño de diseño de redes sociales. Es un proyecto que simula el feed de las redes sociales, con funciones como comentarios, me gusta y eliminación de comentarios.",
+        "project_card_two_description" : "Este es una diseño de redes sociales. Es un proyecto que simula el feed de las redes sociales, con funciones como comentarios, me gusta y eliminación de comentarios.",
         
         "project_card_tree_title" : "API REST - NodeJs + Typescript",
-        "project_card_tree_description" : "Es un proyecto REST API con ciudades, personas y punto final de inicio de sesión, que permite OBTENER, POST, PUT, DELETE al buscar personas y ciudades.",
+        "project_card_tree_description" : "Es un proyecto REST API con ciudades, personas y punto final de inicio de sesión, que permite GET, POST, PUT, DELETE al buscar personas y ciudades.",
 
         "skills_title" : "tecnologias",
 
