--- a/src/i18n/translate/es.json
+++ b/src/i18n/translate/es.json
@@ -46,6 +46,9 @@
         "project_card_four_title" : "Diseño de red social",
         "project_card_four_description" : "Este es una diseño de redes sociales. Es un proyecto que simula el feed de las redes sociales, con funciones como comentarios, me gusta y eliminación de comentarios.",
         
+        "project_card_five_title": "SunCine - Plataforma de películas",
+        "project_card_five_description": "SunCine es una plataforma de películas diseñada para proporcionar información detallada sobre las películas más populares, además de permitir que los usuarios disfruten de sus películas favoritas y gestionen sus preferencias personales.",
+        
 
         "skills_title" : "tecnologias",
 
