--- a/src/i18n/translate/pt_Br.json
+++ b/src/i18n/translate/pt_Br.json
@@ -47,6 +47,9 @@
         "project_card_four_title" : "Layout de rede social",
         "project_card_four_description" : "Este é um projeto de layout de mídia social. É um projeto que simula o feed das redes sociais, com funcionalidades como comentários, curtidas e exclusão de comentários.",
       
+        "project_card_five_title": "SunCine - Plataforma de filmes",
+        "project_card_five_description": "O SunCine é uma plataforma de filmes projetada para fornecer informações detalhadas sobre os filmes mais populares, além de permitir que os usuários curtam seus filmes favoritos e gerenciem preferências pessoais.",
+        
         "skills_title" : "tecnologias",
 
         "aboutme_title" : "sobre mim",
