--- a/src/i18n/translate/es.json
+++ b/src/i18n/translate/es.json
@@ -2,6 +2,7 @@
     "translation": {
         "header_home": "sitio",
         "header_projects": "proyectos",
+        "header_skills": "tecnologias",
         "header_aboutme": "sobre mi",
         "header_contact": "contacto",
 
@@ -20,7 +21,7 @@
         "card_one_description" : "Trabajo en proyectos:",
 
         "card_two_title" : "Análisis y desarrollo de Sistemas",
-        "card_two_date": "2022 - al presente",
+        "card_two_date": "2022 - 2025",
         "card_two_description" : "Licenciatura en análisis y desarrollo de sistemas.",
 
         "card_tree_description" : "Plataforma educativa sobre la más moderna tecnología de desarrollo web y móvil de Brasil.",
